# dsmusic

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker.yml  test.yml
config/: lavalink.example.json
dsmusic/: __main__.py  client.py
dsmusic/assistant/: cog.py
dsmusic/music/: cog.py  player.py  queue.py
dsmusic/tracker/: cog.py
